# SEKURO_TUGAS_1_Chatima-Anandakhorita_PROGRAMMING

src/cmake_soal/: CMakeLists.txt
src/cmake_soal/include/: robot.hpp  robotair.hpp
src/cmake_soal/src/: main.cpp  robot.cpp  robotair.cpp
src/oop_soal_1/: core_mcu.cpp  core_mcu.hpp  main.cpp
src/ros_soal_1/src/pkg1/: CMakeLists.txt  package.xml
src/ros_soal_1/src/pkg1/scripts/: alarm_node.py
src/ros_soal_1/src/pkg1/src/: sensor_node.cpp
src/ros_soal_2/: Video Penjelasan Package
src/stl_soal/: RPG.cpp
